修改流程图以展示插件功能和组件关系

--- a/data/PF-gugubot/前置依赖.md
+++ b/data/PF-gugubot/前置依赖.md
@@ -5,7 +5,18 @@ Python 模块: 参考插件目录内的 requirements.txt 文件，使用命令 p
 
 ## 支持范围
 
-![图片](./src/流程图-1.png)
+```mermaid
+graph LR
+    MCDR[MCDR] <--> GUGUbot[GUGUbot]
+    GUGUbot <--> cq_qq_api[cq_qq_api]
+    cq_qq_api <--> QQBot[QQ机器人]
+    QQBot <--> QQ[QQ]
+    
+    subgraph 咱们插件的功能
+        GUGUbot
+        cq_qq_api
+    end
+```
 
 ## 前置插件
 
