添加WebUI配置说明文档，更新API文档，增加HTTPS配置选项，修正API调用示例格式

--- a/data/PF-webui/快速开始.md
+++ b/data/PF-webui/快速开始.md
@@ -46,6 +46,10 @@
 | `ai_api_key` | DeepSeek AI API密钥 | 空 |
 | `ai_model` | DeepSeek AI 模型名称 | `deepseek-chat` |
 | `ai_api_url` | DeepSeek AI API地址 | `https://api.deepseek.com/v1` |
+| `ssl_enabled` | 是否启用HTTPS | `false` |
+| `ssl_certfile` | SSL证书文件路径 | 空 |
+| `ssl_keyfile` | SSL密钥文件路径 | 空 |
+| `ssl_keyfile_password` | SSL密钥文件密码（如果有） | 空 |
 
 > [NOTE]
 > 
