更新文档，添加关于相对路径的说明，明确相对路径是相对于MCDR根目录的

--- a/data/PF-webui/配置说明.md
+++ b/data/PF-webui/配置说明.md
@@ -84,6 +84,18 @@ siliconflow：https://api.siliconflow.cn/v1/chat/completions
    }
    ```
 
+如果使用相对路径，相对路径是相对MCDR根目录的相对路径。
+而不是相对WebUI配置目录的相对路径。
+
+例如可以使用
+
+```json
+"ssl_certfile": "./config/guguwebui/ssl/cert.pem",
+"ssl_keyfile": "./config/guguwebui/ssl/key.pem",
+```
+
+来指定在MCDR根目录下的config/guguwebui/ssl目录下的证书和密钥文件。
+
 ## 配置文件示例
 
 ```json
