--- a/data/PF-gugubot/前置依赖.md
+++ b/data/PF-gugubot/前置依赖.md
@@ -26,6 +26,10 @@ graph LR
 - `whitelist_api ≥ 1.3.0`   白名单管理
 - `mg_events ≥ 0.2.3`   死亡消息和成就消息
 
+请注意，**GUGUbot** 尚未支持 `mg_events ≥ 1.0.0` 的版本。
+
+详情参考：[反馈：死亡和成就消息不可用解决方案 #162](https://github.com/LoosePrince/PF-GUGUBot/issues/162)
+
 ## 可选插件
 
 - `PF-MCDR-WebUI ≥ 1.0.0`   提供WebUI的配置管理
