--- a/data/PF-gugubot/配置.md
+++ b/data/PF-gugubot/配置.md
@@ -9,7 +9,7 @@
 
 ## 前置cq_qq_api配置
 
-[配置](PF-cq-api/配置.md) 和 [机器人食用指南](PF-cq-api/机器人食用指南)
+[快速开始](PF-cq-api/快速开始.md) 和 [机器人食用指南](PF-cq-api/机器人食用指南.md)
 
 ## GUGUbot机器人配置
 >
