更新EasyDocument版本到v1.2.7

--- a/data/PF-gugubot/疑难解答.md
+++ b/data/PF-gugubot/疑难解答.md
@@ -11,7 +11,7 @@
 若是不喜请修改插件内 `data/text.py` 文件中 `mc2qq_template` 的模板
 `.mcdr`本质是个压缩包，使用解压工具进行查找，可参考如下（7z）：
 
-![图片](./src/疑难解答-2.png)
+![图片](/src/疑难解答-2.png)
 
 `mc2qq_template` 应该如下：
 
