更新文档和链接

--- a/data/PF-gugubot/快速开始.md
+++ b/data/PF-gugubot/快速开始.md
@@ -24,7 +24,7 @@
 
 - 正向websocket服务端口: 接收数据上报的端口，例如 `8080`
 - 消息上报格式: 机器人基于CQ码进行解析
-- 参考[机器人食用指南](PF-cq-api/机器人食用指南.md)
+- 参考[机器人食用指南](PF-cq-api/机器人食用指南)
 
 ### CQ-qq-api
 
@@ -40,4 +40,4 @@
 > 
 > 如果您在安装完成后启动提示没有配置文件请下载 `config_default.yml` 重名名为 `config.yml` 放入 `config/GUGUbot/` 再运行
 
-请注意，以上仅为必要配置项，如果您想要更加私有的体验，请完整的阅读 [配置](PF-gugubot/配置.md) 项！
+请注意，以上仅为必要配置项，如果您想要更加私有的体验，请完整的阅读 [配置](PF-gugubot/配置) 项！
