--- a/data/PF-gugubot/文件说明.md
+++ b/data/PF-gugubot/文件说明.md
@@ -1,6 +1,6 @@
 # 文件说明文档
 
-注:关于自定义风格可参照[功能列表-风格](PF-gugubot/功能列表.md#heading-12)。
+注:关于自定义风格可参照[功能列表-风格详细说明](PF-gugubot/功能列表.md#风格详细说明)。
 
 ## 文件说明
 
