--- a/data/PF-gugubot/前置依赖.md
+++ b/data/PF-gugubot/前置依赖.md
@@ -20,7 +20,7 @@ graph LR
 
 ## 前置插件
 
-- `cq_qq_api ≥ 1.1.0`   用于连接到QQ机器人，不懂的可以去看[CQ-QQ-API](/PF-cq-api/README.md)文档
+- `cq_qq_api ≥ 1.1.0`   用于连接到QQ机器人，不懂的可以去看[CQ-QQ-API](/PF-cq-api/README)文档
 - `player_ip_logger ≥ 1.1.0`   区分真实玩家
 - `online_player_api ≥ 1.0.0`   在线玩家记录
 - `whitelist_api ≥ 1.3.0`   白名单管理
