--- a/data/PF-gugubot/配置.md
+++ b/data/PF-gugubot/配置.md
@@ -9,7 +9,7 @@
 
 ## 前置cq_qq_api配置
 
-[快速开始](PF-cq-api/快速开始.md) 和 [机器人食用指南](PF-cq-api/机器人食用指南)
+[快速开始](PF-cq-api/快速开始) 和 [机器人食用指南](PF-cq-api/机器人食用指南)
 
 ## GUGUbot机器人配置
 >
@@ -314,7 +314,7 @@
 
 默认值：无
 
-- 自定义风格储存路径，[功能列表](PF-gugubot/功能列表.md#heading-12)
+- 自定义风格储存路径，可参考[功能列表 - 风格详细说明](PF-gugubot/功能列表.md#风格详细说明)
 
 
 #### font_path
@@ -436,7 +436,7 @@
 ## 其它-问题
 
 Q: 关于 MC → 群内 转发时，玩家ID包裹方式不一  
-A：[疑难解答#2](PF-gugubot/疑难解答.md#heading-2)
+A：[GUGUbot 疑难解答#2](常见问题/GUGUbot-疑难解答.md#关于-mc--群内-转发时玩家id包裹方式不一)
 
 Q：如何启用RCON  
-A：[疑难解答#3](PF-gugubot/疑难解答.md#heading-3)
+A：[GUGUbot 疑难解答#3](常见问题/GUGUbot-疑难解答.md#如何配置rcon如何连接到rcon提示-开启rcon以显示结果-怎么办)
