--- a/data/PF-cq-api/快速开始.md
+++ b/data/PF-cq-api/快速开始.md
@@ -45,3 +45,7 @@
 | --- | --- | --- |
 | 正向websocket服务端口 | 8080 | 接收数据上报的端口 |
 | 消息上报格式 | CQ码 / string | 机器人基于CQ码进行解析 |
+
+> [TIP]
+>
+> 是修改 `port` 和 机器人的正向websocket服务端口一致，不是反向的！
