--- a/data/PF-gugubot/配置.md
+++ b/data/PF-gugubot/配置.md
@@ -285,7 +285,7 @@
 
 #### dict_address下的路径配置
 
-> 如果你不清楚你的目的请不要修改路径!
+> 如果您不清楚您的目的请不要修改路径!
 
 
 #### ban_word_dict
@@ -381,7 +381,7 @@
 默认值：`150`
 
 - 文字超长转图片（默认大于150字转图片，设置-1关闭）
-- 如果你的机器人不能发送图片或者触发了风控请关闭转图片
+- 如果您的机器人不能发送图片或者触发了风控请关闭转图片
 
 
 #### max_bound
@@ -389,7 +389,7 @@
 默认值：`1`
 
 - 一个玩家可以绑定多少个游戏ID
-- 如果你不清楚你的目的请不要修改它!
+- 如果您不清楚您的目的请不要修改它!
 
 
 #### random_template
