更新webui的文档

--- a/data/PF-webui/快速开始.md
+++ b/data/PF-webui/快速开始.md
@@ -2,15 +2,17 @@
 
 ## 依赖配置
 
-- **Python 包:** 请确保已安装 [Python™](https://www.python.org/) 和 [pip](https://pypi.org/project/pip/) (pip通常在安装完python后会默认安装)。
+### Python 依赖
 
-- ~~**Python 模块:** 参考插件目录内的 `requirements.txt` 文件，使用命令 `pip install -r requirements.txt` 进行安装。~~
+> ~~参考插件目录内的 `requirements.txt` 文件，使用命令 `pip install -r requirements.txt` 进行安装。~~
+
+### 前置插件
+
+PIM插件，已内置WebUI，如有需要可以在设置页面将其安装到外部以为其它可能需要的插件提供帮助，但是非常不建议你这样做！。
 
 > [NOTE]提示
 >
 > 与 v1.4.0 起WebUI将自行处理依赖安装，也就是说，即使您是通过手动下载安装的，也不再需要处理 [requirements.txt](https://github.com/LoosePrince/PF-MCDR-WebUI/blob/main/requirements.txt) 文件和手动安装依赖了！
-
-- **前置插件:** PIM插件，已内置WebUI，如有需要可以在设置页面将其安装到外部以为其它可能需要的插件提供帮助。
 
 ## 使用方式
 
