--- a/data/PF-webui/配置说明.md
+++ b/data/PF-webui/配置说明.md
@@ -25,10 +25,13 @@
 
 ## 插件仓库配置
 
-| 配置项 | 说明 | 默认值 | 示例值 |
-|--------|------|--------|--------|
-| `mcdr_plugins_url` | MCDR 插件仓库地址 | `https://api.mcdreforged.com/catalogue/everything_slim.json.xz` | - |
-| `repositories` | 自定义插件仓库列表 | `[]` | `["https://example.com/plugins"]` |
+- `mcdr_plugins_url`: MCDR 插件仓库地址
+  - 默认值: `https://api.mcdreforged.com/catalogue/everything_slim.json.xz`
+  - 示例值: -
+
+- `repositories`: 自定义插件仓库列表
+  - 默认值: `[]`
+  - 示例值: `["https://example.com/plugins"]`
 
 仓库配置说明：
 
