--- a/data/PF-webui/快速开始.md
+++ b/data/PF-webui/快速开始.md
@@ -14,6 +14,12 @@ PIM插件，已内置WebUI，如有需要可以在设置页面将其安装到外
 >
 > 与 v1.4.0 起WebUI将自行处理依赖安装，也就是说，即使您是通过手动下载安装的，也不再需要处理 [requirements.txt](https://github.com/LoosePrince/PF-MCDR-WebUI/blob/main/requirements.txt) 文件和手动安装依赖了！
 
+## 安装
+
+1. 将Release里面的 `guguwebui-v1.x.x.mcdr` 放入 `/plugins/`（MCDR目录下plugins文件夹内）
+2. 加载后，在 `config/guguwebui/config.json` 中配置WebUI
+3. 加载WebUI: `!!MCDR plugin load guguwebui`
+
 ## 使用方式
 
 > 目前未对接GUGUbot账号系统；当账号为QQ号时会显示QQ头像和昵称作为管理员名称和头像。
@@ -36,9 +42,16 @@ PIM插件，已内置WebUI，如有需要可以在设置页面将其安装到外
 !!webui temp
 ```
 
+**访问WebUI**
+
+1. 访问WebUI: `http://127.0.0.1:8000` （默认端口）
+2. 输入账号密码登录（临时密码登录请使用临时密码）
+
 ## 配置说明
 
 配置文件位于 `config.json`，以下是各配置项的说明：
+
+具体请查看详细的 [配置说明](PF-webui/配置说明)
 
 | 配置项 | 说明 | 默认值 |
 |--------|------|--------|
