更新PF-gugubot文档，新增游戏消息用户@功能和指令解绑说明，添加忽略服务器指令模式的配置说明，修正mg_events版本支持说明。

--- a/data/PF-gugubot/配置.md
+++ b/data/PF-gugubot/配置.md
@@ -433,6 +433,18 @@
 
 - 退群时是否自动移除白名单
 
+#### ignore_mc_command_patterns
+
+默认值：
+
+```yaml
+- ".*?\\[Command: /.*\\]" # carpet 指令记录
+- ".*?xaero-waypoint:.*" # 忽略 Xaero Waypoint 的共享
+```
+
+- 忽略的服务器指令模式
+- 使用正则表达式，可以忽略某些指令的转发
+
 ## 其它-问题
 
 Q: 关于 MC → 群内 转发时，玩家ID包裹方式不一  
