--- a/data/PF-gugubot/前置依赖.md
+++ b/data/PF-gugubot/前置依赖.md
@@ -24,9 +24,9 @@ graph LR
 - `player_ip_logger ≥ 1.1.0`   区分真实玩家
 - `online_player_api ≥ 1.0.0`   在线玩家记录
 - `whitelist_api ≥ 1.3.0`   白名单管理
-- `mg_events ≥ 0.2.3`   死亡消息和成就消息
+- `mg_events ≥ 1.0.0`   死亡消息和成就消息
 
-请注意，**GUGUbot** 尚未支持 `mg_events ≥ 1.0.0` 的版本。
+请注意，**GUGUbot** 在v1.9.13版本之前尚未支持 `mg_events ≥ 1.0.0` 的版本。
 
 详情参考：[反馈：死亡和成就消息不可用解决方案 #162](https://github.com/LoosePrince/PF-GUGUBot/issues/162)
 
