--- a/data/PF-gugubot/功能列表.md
+++ b/data/PF-gugubot/功能列表.md
@@ -11,6 +11,7 @@
 
 - 转发消息到游戏中时会显示群聊名称，悬停可以显示群号，点击复制群号。
 - 关闭了 bound_notice(配置：绑定提示) 后将会将未绑定群成员的消息转发到游戏中。
+- 可以在游戏消息任意位置中使用 [@qq] @群中用户，优先级：@qq号、@绑定的游戏ID、@qq昵称
 
 ### 游戏内指令
 
@@ -33,6 +34,7 @@
 #服务器              -> 同时获取在线玩家和假人列表
 #绑定 <游戏ID>       -> 绑定您的游戏ID
 #绑定 @xxx <游戏ID> -> 【管理员功能，在群中使用】 给指定用户绑定游戏ID
+#绑定 解绑           -> 解绑自己的游戏ID
 #mc <消息>           -> 向游戏内发送消息（可以触发游戏内关键词）
 #风格                -> 机器人风格帮助
 #游戏关键词 列表      -> 显示现有游戏内关键词列表
