更新WebUI文档，新增如何区分SSL证书和密钥的说明

--- a/data/PF-webui/配置说明.md
+++ b/data/PF-webui/配置说明.md
@@ -99,6 +99,8 @@ siliconflow：https://api.siliconflow.cn/v1/chat/completions
 
 来指定在MCDR根目录下的config/guguwebui/ssl目录下的证书和密钥文件。
 
+如何区分证书和密钥文件：[如何区分SSL证书和密钥](常见问题/WebUI#如何区分ssl证书和密钥)
+
 ## 配置文件示例
 
 ```json
