--- a/data/PF-gugubot/快速开始.md
+++ b/data/PF-gugubot/快速开始.md
@@ -1,6 +1,6 @@
 # 安装(快速开始)
 
-## MCDR快捷安装
+## MCDR快捷安装（推荐）
 
 1. MCDR服务端输入 `!!MCDR plugin install gugubot`
 2. 加载后，在 `config/cq_qq_api/config.json` 中配置机器人api接口
