--- a/data/PF-gugubot/配置.md
+++ b/data/PF-gugubot/配置.md
@@ -376,9 +376,16 @@
 ### 其他设置
 
 
+
+#### force_game_name
+
+默认值：`false`
+
+- 强制使用游戏内名称作为绑定名称
+
 #### font_limit
 
-默认值：`150`
+默认值：`-1`
 
 - 文字超长转图片（默认大于150字转图片，设置-1关闭）
 - 如果您的机器人不能发送图片或者触发了风控请关闭转图片
@@ -398,13 +405,11 @@
 
 - 转发使用随机发言模板，防止风控
 
-
 #### show_message_in_console
 
 默认值：`true`
 
 - 展示上报消息
-
 
 #### style
 
@@ -417,21 +422,81 @@
 
 默认值：`0`
 
-- 风格切换冷却(单位: 秒)
+- 风格切换冷却时间（秒）
 
+#### inactive_notice_option
 
-#### whitelist_add_with_bound
+默认值：
+
+```yaml
+- "admin"
+# - "admin_group"
+# - "group"
+-
+```
+
+- 不活跃检查通知对象，注释掉表示不发
+
+#### unbound_notice_option
+
+默认值：
+
+```yaml
+- "admin"
+- "admin_group"
+- "group"
+-
+```
+
+- 未绑定检查通知对象，注释掉表示不发
+
+#### inactive_check_interval
+
+默认值：`-1`
+
+- 不活跃成员检查间隔（小时），-1为不检查
+
+#### inactive_player_time_range
+
+默认值：`30`
+
+- 多久未活跃判定为不活跃玩家（天）
+
+#### unbound_check_interval
+
+默认值：`-1`
+
+- 未绑定成员检查间隔（小时），-1为不检查
+
+#### unbound_member_time_limit
+
+默认值：`-1`
+
+- 成员多久后会被判定为未绑定（小时），-1为不检查
+
+#### unbound_member_tick_limit
+
+默认值：`-1`
+
+- 未绑定成员多久后会被移除（小时），-1为不移除
+
+#### unbound_member_notice
 
 默认值：`false`
 
-- 绑定时是否自动添加白名单
+- 未绑定成员私信通知
 
+#### whitelist_add_with_bound
+
+默认值：`true`
+
+- 绑定ID自动绑定服务器白名单
 
 #### whitelist_remove_with_leave
 
 默认值：`true`
 
-- 退群时是否自动移除白名单
+- 退群时移除白名单
 
 #### ignore_mc_command_patterns
 
@@ -442,8 +507,25 @@
 - ".*?xaero-waypoint:.*" # 忽略 Xaero Waypoint 的共享
 ```
 
-- 忽略的服务器指令模式
-- 使用正则表达式，可以忽略某些指令的转发
+- 忽略的服务器指令模式，正则表达式
+
+#### player_name_pattern
+
+默认值：`"^[a-zA-Z0-9_]{3,16}$"`
+
+- 玩家名称匹配模板
+
+#### unbound_check_last_time（系统自动生成）
+
+默认值：`-1`
+
+- 上次检查未绑定成员的时间戳
+
+#### inactive_player_check_last_time（系统自动生成）
+
+默认值：`-1`
+
+- 上次检查未活跃成员的时间戳
 
 ## 其它-问题
 
