--- a/data/PF-webui/开发/插件兼容.md
+++ b/data/PF-webui/开发/插件兼容.md
@@ -1,85 +1,164 @@
 # 插件兼容
 
-## 如何为配置文件提供中文描述以支持WebUI？
+## 插件配置多语言指南（支持 YAML 与 JSON）
 
-对于开发者来说，若希望自己的插件配置在WebUI中显示中文标题和副标题，可参考以下方式：
+本文档介绍如何为插件的配置项提供“标题与描述”的多语言（或单语言）信息，以便 WebUI 在表单模式下展示友好的中文/英文提示。
 
-### 1. yml 文件
+### 总览
 
-- **规则**：每一项配置的上一行或者同一行注释作为中文标题，使用英文 `::` 分割，第一项为标题，第二项为副标题。
-- **示例**：
+- **YAML 配置**：在同一个 `.yml/.yaml` 文件中通过注释编写翻译。
+- **JSON 配置**：在同目录下提供一个独立的 `*_lang.json` 翻译文件。
+- **语言代码**：兼容 `zh-CN/zh_cn/zh-cn` 与 `en-US/en_us/en-us` 等多种写法，最终会被规范化为 `zh-CN`、`en-US`。
+- **显示顺序**：优先使用“当前界面语言”，无则回退“默认语言”，再回退“第一个可用语言”。
 
-  ```yaml
-  # 服务器端口::监听的端口号
-  port: 8080
-  # 数据库地址::用于存储数据的数据库
-  db_url: "localhost:3306"
-  ```
+---
 
-  或者
+## 一、YAML 格式
 
-  ```yaml
-  port: 8080 # 服务器端口::监听的端口号
-  db_url: "localhost:3306" # 数据库地址::用于存储数据的数据库
-  ```
+YAML 支持两种书写方案，可同时混用
 
-  > 注意：请务必使用英文的 `::` 作为分隔符。
+如使用方案一加上方案二的的组合（如仅添加 `[en-US]` 语言块，而`[zh-CN]` 语言块不添加）。
 
-这样既能在配置文件中直接为配置项添加中文描述，也能在WebUI中显示中文标题和副标题。
+### 方案一：同行或上一行注释（单语言/默认语言）
 
-### 2. json 文件
+- 在键后添加注释，格式：`名称::描述`。
+- 若同行没有注释，则使用上一行的普通注释作为该键的名称/描述。
 
-鉴于json无法添加注释，所以需要使用以下方式
+示例：
 
-- **规则**：为每个需要加标题的配置文件（如 `abc.json`），在同级目录下新建一个同名加 `_lang` 的文件（如 `abc_lang.json`）。
-- **内容格式**：每个配置项对应一个 `[标题, 副标题]` 的数组。
-- **示例**：
+```yaml
+host: 127.0.0.1 # host::IP地址
+port: 8080 # port::正向 Websocket 端口号
+post_path: "" # Endpoint::host:port/Endpoint (一般不用动)
+token: "" # token::QQ 的加密 token
+language: zh # language::语言设置
+#API 最长等待时间::单位（秒）
+max_wait_time: 5
+```
 
-  `abc.json`:
-  ```json
-  {
-    "port": 8080,
-    "db_url": "localhost:3306"
+
+要点：
+
+- `名称::描述` 二段式；若只写一个词则作为“名称”，描述留空。
+- 若无语言块（见方案二），则该注释被视为“默认语言”（默认 `zh-CN`，也可通过 `language` 字段指定）。
+
+### 方案二：语言块（多语言）
+
+- 以注释行 `# [语言代码]` 开始一个语言块；
+- 在块内使用管道格式：`# 键 | 名称::描述`（也可只有名称）。
+
+示例：
+
+```yaml
+host: 127.0.0.1
+port: 8080
+post_path: ""
+token: ""
+language: zh
+max_wait_time: 5
+
+# [zh-CN]
+# host | host::IP地址
+# port | port::正向 Websocket 端口号
+# post_path | Endpoint::host:port/Endpoint (一般不用动)
+# token | token::QQ 的加密 token
+# language | language::语言设置
+# max_wait_time | API 最长等待时间::单位（秒）
+
+# [en-US]
+# host | host::IP address
+# port | port::Forward Websocket port number
+# post_path | Endpoint::host:port/Endpoint (usually not to be changed)
+# token | token::QQ encrypted token
+# language | language::Language setting
+# max_wait_time | API maximum waiting time::Unit (seconds)
+```
+
+回退规则：
+
+- 某个键在语言块里缺失时，会回退到“方案一”的同行/上一行注释。
+- 默认语言顺序：`language` 字段指定 > 第一段语言块 > `zh-CN`。
+
+---
+
+## 二、JSON 格式
+
+JSON 配置的翻译需要放在“同名 + `_lang.json`”文件内。例如：
+
+- 配置文件：`config/my_plugin/config.json`
+- 翻译文件：`config/my_plugin/config_lang.json`
+
+翻译文件结构：顶层是语言代码，内部是“键 → 标题/描述”。支持两种值格式：
+
+- 数组格式：`[名称, 描述]`
+- 对象格式：`{"name": 名称, "desc": 描述}`
+
+示例：
+
+```json
+{
+  "zh_cn": {
+    "host": ["host", "IP地址"],
+    "port": ["port", "正向 Websocket 端口号"],
+    "post_path": ["Endpoint", "host:port/Endpoint (一般不用动)"],
+    "token": ["token", "QQ 的加密 token"],
+    "language": ["language", ""],
+    "max_wait_time": ["API 最长等待时间", "单位（秒)"]
+  },
+  "en_us": {
+    "host": ["host", "IP address"],
+    "port": ["port", "Websocket port"],
+    "post_path": ["Endpoint", "host:port/Endpoint"],
+    "token": ["token", "QQ token"],
+    "language": ["language", ""],
+    "max_wait_time": ["API maximum wait time", "/second"]
   }
-  ```
+}
+```
 
-  `abc_lang.json`:
-  ```json
-  {
-    "port": ["服务器端口", "监听的端口号"],
-    "db_url": ["数据库地址", "用于存储数据的数据库"]
-  }
-  ```
+说明：
 
-  > 参考示例：[config_lang.json](https://github.com/LoosePrince/PF-MCDR-WebUI/blob/main/config_lang.json)
+- 语言代码可写为 `zh-CN/zh_cn/zh-cn`、`en-US/en_us/en-us` 等，WebUI 会自动规范化。
+- 若只提供一种语言，也能正常工作；其他语言将回退到该语言。
+- `properties` 配置的翻译也使用相同思路：为 `xxx.properties` 提供 `xxx_lang.json`。
+
+> 复杂嵌套结构或存在相同键名时，当前版本建议仅对“顶层键”提供翻译，以保证解析稳定。
+
+---
+
+### 非多语言（单语言）写法建议
+
+- YAML：仅使用“方案一”的同行/上一行注释，作为默认语言即可。
+- JSON：在 `*_lang.json` 中只提供一种语言（如 `zh_cn`），或者仅提供名称、描述其中之一（描述可留空）。
 
 使用过于复杂和存在相同键名的情况下无法使用
 
-### 3. html 格式
+## 三、html 格式
 
 - **规则**：使用 `main.json` 文件，通过键值对指定每个配置文件对应的 `html` 文件。WebUI 加载时会自动加载对应的 `html` 内容。
 - **样式与脚本**：如需自定义样式或脚本，请直接在 `html` 文件中使用 `<style>` 和 `<script>` 标签，不要使用外链方式加载本地 css 或 js 文件。
 
-- **示例**：
+示例：
 
-  `main.json`:
-  ```json
-  {
-    "my_plugin_config": "my_plugin_config.html"
-  }
-  ```
+`main.json`:
 
-  `my_plugin_config.html`:
-  ```html
-  <div>
-    <h3>自定义配置界面</h3>
-    <style>
-      /* 你的样式 */
-    </style>
-    <script>
-      // 你的脚本
-    </script>
-  </div>
-  ```
+```json
+{
+  "my_plugin_config": "my_plugin_config.html"
+}
+```
 
+`my_plugin_config.html`:
 
+```html
+<div>
+  <h3>自定义配置界面</h3>
+  <style>
+    /* 你的样式 */
+  </style>
+  <script>
+    // 你的脚本
+  </script>
+  <!-- 提示：`main.json` 会被 WebUI 过滤，不会出现在配置文件列表中 -->
+</div>
+```
