--- a/data/PF-webui/开发/插件兼容.md
+++ b/data/PF-webui/开发/插件兼容.md
@@ -10,6 +10,7 @@
 - **JSON 配置**：在同目录下提供一个独立的 `*_lang.json` 翻译文件。
 - **语言代码**：兼容 `zh-CN/zh_cn/zh-cn` 与 `en-US/en_us/en-us` 等多种写法，最终会被规范化为 `zh-CN`、`en-US`。
 - **显示顺序**：优先使用“当前界面语言”，无则回退“默认语言”，再回退“第一个可用语言”。
+- **结构化支持**：YAML 现已支持嵌套对象与数组；JSON 亦支持结构化的翻译文件（`default + translations + children`）。
 
 ---
 
@@ -79,6 +80,41 @@ max_wait_time: 5
 - 某个键在语言块里缺失时，会回退到“方案一”的同行/上一行注释。
 - 默认语言顺序：`language` 字段指定 > 第一段语言块 > `zh-CN`。
 
+### 结构化（嵌套对象与数组）
+
+YAML 现在原生支持对“嵌套对象/数组”的结构化翻译：
+
+- **点路径（对象子键）**：在语言块中用 `父键.子键` 指定嵌套键，例如 `# command.ban_word | 违禁词撤回::……`。
+- **数组与枚举项**：
+  - 对于数组本身，用 `# 数组键 | 名称::描述` 描述整体；
+  - 若数组表示“枚举/选项”，可用 `数组键.选项值` 为每个选项命名，例如：
+    - `# inactive_notice_option.admin | 机器人管理员`、`# inactive_notice_option.group | 监控群`；
+  - 普通标量数组项不需要逐项翻译，UI 中会按整体名称展示。
+- **示例**：
+
+```yaml
+command:
+  ban_word: true # 违禁词撤回
+
+# [zh-CN]
+# command | 指令相关
+# command.ban_word | 违禁词撤回::命中违禁词将撤回消息
+
+inactive_notice_option:
+  - "admin"
+  - "group"
+
+# [en-US]
+# inactive_notice_option | Inactive Check Target
+# inactive_notice_option.admin | Admin
+# inactive_notice_option.group | Monitor Group
+```
+
+注意：
+
+- 使用“点路径”可以在同一文档中区分相同的子键名（如多个对象中都存在 `name`）。
+- 极端复杂/动态键名（运行期才出现的键）不建议逐项翻译，优先为“顶层键/重要子键”提供名称与描述。
+
 ---
 
 ## 二、JSON 格式
@@ -88,7 +124,11 @@ JSON 配置的翻译需要放在“同名 + `_lang.json`”文件内。例如：
 - 配置文件：`config/my_plugin/config.json`
 - 翻译文件：`config/my_plugin/config_lang.json`
 
-翻译文件结构：顶层是语言代码，内部是“键 → 标题/描述”。支持两种值格式：
+JSON 翻译支持两种模式：
+
+### 1）平铺模式（兼容）
+
+顶层即为语言代码，内部是“键 → 标题/描述”。支持两种值格式：
 
 - 数组格式：`[名称, 描述]`
 - 对象格式：`{"name": 名称, "desc": 描述}`
@@ -122,7 +162,53 @@ JSON 配置的翻译需要放在“同名 + `_lang.json`”文件内。例如：
 - 若只提供一种语言，也能正常工作；其他语言将回退到该语言。
 - `properties` 配置的翻译也使用相同思路：为 `xxx.properties` 提供 `xxx_lang.json`。
 
-> 复杂嵌套结构或存在相同键名时，当前版本建议仅对“顶层键”提供翻译，以保证解析稳定。
+### 2）结构化模式（推荐，适用于嵌套对象/数组）
+
+当配置包含较多“嵌套对象/数组/枚举项”时，建议使用结构化模式：
+
+- 顶层包含 `default`（默认语言）与 `translations`（各语言内容）。
+- 每个键为一个对象，包含 `name`、`desc` 与可选的 `children`；`children` 用于描述子键。
+- 子键继续使用对象结构递归描述；也可使用“点路径”作为键名以减少嵌套层级。
+
+示例（节选）：
+
+```json
+{
+  "default": "en-US",
+  "translations": {
+    "en-US": {
+      "command": {
+        "name": "Commands",
+        "desc": "Feature switches",
+        "children": {
+          "ban_word": { "name": "Ban Word Recall", "desc": "Recall messages that contain banned words", "children": {} }
+        }
+      },
+      "inactive_notice_option": {
+        "name": "Inactive Check Target",
+        "desc": "Where to send inactive member alerts",
+        "children": {
+          "admin": { "name": "Admin", "desc": "Bot administrators", "children": {} },
+          "group": { "name": "Monitor Group", "desc": "Monitored group", "children": {} }
+        }
+      }
+    },
+    "zh-CN": {
+      "command": {
+        "name": "指令相关",
+        "desc": null,
+        "children": { "ban_word": { "name": "违禁词撤回", "desc": null, "children": {} } }
+      }
+    }
+  }
+}
+```
+
+说明：
+
+- `default` 控制当某语言缺失时的首选回退语言。
+- `children` 用于结构化子键；也可使用“点路径”在同级上直接声明（两种写法等价，由 WebUI 解析）。
+- 对“枚举选项/固定取值”的翻译可按子键处理（如 `inactive_notice_option.admin`）。
 
 ---
 
@@ -131,7 +217,7 @@ JSON 配置的翻译需要放在“同名 + `_lang.json`”文件内。例如：
 - YAML：仅使用“方案一”的同行/上一行注释，作为默认语言即可。
 - JSON：在 `*_lang.json` 中只提供一种语言（如 `zh_cn`），或者仅提供名称、描述其中之一（描述可留空）。
 
-使用过于复杂和存在相同键名的情况下无法使用
+现已支持嵌套结构与相同子键名的区分（通过“点路径/结构化 children”）。仍不建议对“极端复杂或动态生成的键”逐项翻译，优先保证主要配置项可读性。
 
 ## 三、html 格式
 
