新增服务器聊天页（/chat）相关配置与API文档

--- a/data/PF-webui/快速开始.md
+++ b/data/PF-webui/快速开始.md
@@ -69,6 +69,10 @@ PIM插件，已内置WebUI，如有需要可以在设置页面将其安装到外
 | `ssl_certfile` | SSL证书文件路径 | 空 |
 | `ssl_keyfile` | SSL密钥文件路径 | 空 |
 | `ssl_keyfile_password` | SSL密钥文件密码（如果有） | 空 |
+| `public_chat_enabled` | 是否启用公开聊天页（/chat） | `false` |
+| `public_chat_to_game_enabled` | 是否允许网页将消息发送到游戏 | `false` |
+| `chat_verification_expire_minutes` | 验证码过期时间（分钟） | `10` |
+| `chat_session_expire_hours` | 会话过期时间（小时） | `24` |
 
 > [NOTE]
 > 
