--- a/data/PF-webui/配置说明.md
+++ b/data/PF-webui/配置说明.md
@@ -101,6 +101,34 @@ siliconflow：https://api.siliconflow.cn/v1/chat/completions
 
 如何区分证书和密钥文件：[如何区分SSL证书和密钥](常见问题/WebUI#如何区分ssl证书和密钥)
 
+## 公开聊天页（/chat）配置
+
+### config.json 配置项
+
+以下配置默认值见 `src/guguwebui/utils/constant.py` 的 `DEFALUT_CONFIG`：
+
+| 配置项 | 类型 | 默认值 | 说明 |
+|--------|------|--------|------|
+| `public_chat_enabled` | bool | `false` | 是否启用公开聊天页（/chat） |
+| `public_chat_to_game_enabled` | bool | `false` | 允许网页将消息发送到游戏 |
+| `chat_verification_expire_minutes` | int | `10` | 验证码过期时间（分钟） |
+| `chat_session_expire_hours` | int | `24` | 会话过期时间（小时） |
+
+以上配置可在“Web设置 → 公开聊天页设置”中可视化调整，并通过 `POST /api/save_web_config` 保存。
+
+### 前端设置字段映射
+
+前端设置页面字段（`src/guguwebui/js/settings.js`）：
+
+- `publicChatEnabled`, `publicChatToGameEnabled`
+- `chatVerificationExpireMinutes`, `chatSessionExpireHours`
+
+### 权限与安全
+
+- 登录与发送消息均需要有效会话
+- 当 `public_chat_to_game_enabled = false` 时，网页端发送将被拒绝
+- 建议在生产环境启用 HTTPS（参见上文 HTTPS 配置）
+
 ## 配置文件示例
 
 ```json
